fix alignment

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -22,3 +22,11 @@ main {
   width: 30%;
   border: dashed medium Grey;
 }
+
+.alignment {
+  transform: translate(70px, 0px);
+}
+
+.align {
+  transform: translate(25px, 0px);
+}
